# meta-agents-research-environments

./: .gitignore  AGENTS.md  SCENARIO_AND_APP_CREATION_PRIMER.md  pyproject.toml  requirements-dev.txt
are/simulation/: config.py  main.py  multi_scenario_runner.py  scenario_runner.py  tool_utils.py
are/simulation/agents/: agent_builder.py  agent_config_builder.py  agent_log.py  are_simulation_agent_config.py  user_proxy.py
are/simulation/agents/completions_agent/: agent_factory.py
are/simulation/agents/default_agent/: agent_factory.py  base_agent.py
are/simulation/agents/default_agent/termination_methods/: are_simulation.py
are/simulation/agents/default_agent/tools/: action_executor.py  completions_action_executor.py  responses_action_executor.py
are/simulation/agents/llm/: llm_engine_builder.py
are/simulation/agents/llm/openai/: openai_completions_engine.py  openai_responses_engine.py
are/simulation/agents/responses_agent/: agent_builder.py  agent_factory.py
are/simulation/apps/: agent_user_interface.py
are/simulation/cli/: shared_params.py
are/simulation/gui/: cli.py
are/simulation/gui/server/: are_simulation_gui.py  server.py
are/simulation/scenarios/: config.py  validation_result.py
are/simulation/scenarios/commitments/: __init__.py  commitment_tracking.py  data.py  harness.py  scenario.py
are/simulation/scenarios/email_calendar_series/: __init__.py  email_calendar_series.py
are/simulation/scenarios/mafia/: game.py  roles.py
are/simulation/scenarios/scenario_email_calendar_manager/: README.md  __init__.py  scenario.py
are/simulation/scenarios/scenario_master/: scenario.py
are/simulation/scenarios/scenario_tutorial/: scenario.py
are/simulation/utils/: type_utils.py
